test/invalid-syntax/56334_invalidCharacter/invalidCharacter.agu
-- Author: fc56334, Goncalo Lopes

let x~ : Int = 3